--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,8 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>
-			{% block title %}Mamie -
-			{% endblock %}
+			{% block title %}Mamie - {% endblock %}
 		</title>
 		{% block stylesheets %}
 			<link href="https://bootswatch.com/5/lumen/bootstrap.min.css" rel="stylesheet">
@@ -15,45 +14,36 @@
 	<body>
         <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
-			    <a class="navbar-brand" href="{{path('app_home')}}">Mamie</a>
+			    <a class="navbar-brand" href="{{path('app_home')}}"><i class="bi bi-cup-hot-fill align-middle"></i> Mamie <i class="align-middle bi bi-cup-hot-fill"></i></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
               <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" href="{{path('app_home')}}">Home
+                    <a class="nav-link active" href="{{path('app_home')}}">Accueil
                         <span class="visually-hidden">(current)</span>
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="{{path('app_ajoutCafe')}}">Ajouter un café</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="{{path('app_liste_typecafe')}}">Liste des types de cafés</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Separated link</a>
-                    </div>
+                    <a class="nav-link" href="{{path('app_liste_cafe')}}">Liste des cafés</a>
                   </li>
                 </ul>
-                <form class="d-flex">
-                  <input class="form-control me-sm-2" type="search" placeholder="Search">
-                  <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>
               </div>
             </div>
           </nav>
     <div class="container-fluid">
+      {% for message in app.flashes('notice') %}
+        <h2 class="alert alert-success text-center mt-4 mb-4" role="alert">
+          {{ message }}
+        </h2>
+      {% endfor %}
 		{% block body %}Mamie
 		{% endblock %}
     </div>
