commit de fin du projet mamie2

--- a/templates/cafe/listeCafes.html.twig
+++ b/templates/cafe/listeCafes.html.twig
@@ -18,7 +18,7 @@
 							<tr class="fw-bold text-primary">
 								<th scope="col">Nom</th>
 								<th scope="col">Prix</th>
-								<th scope="col">Payx</th>
+								<th scope="col">Pays</th>
 								<th scope="col">Description</th>
 							</tr>
 						</thead>
